[gd_scene load_steps=37 format=3 uid="uid://dd8ynwlqk5ape"]

[ext_resource type="Script" uid="uid://cljibjcc82bst" path="res://Scripts/Player.gd" id="1_2d5jy"]
[ext_resource type="Script" uid="uid://cspo745ll5es6" path="res://Scenes/reticle.gd" id="2_1oh1a"]
[ext_resource type="PackedScene" uid="uid://xrigcg1pkjhc" path="res://animations/SteadyModeRig.glb" id="2_woolh"]
[ext_resource type="PackedScene" uid="uid://cacjh0uutxcgp" path="res://animations/SwiftModeRig.glb" id="3_1xckg"]
[ext_resource type="Theme" uid="uid://188uxhkjg4sx" path="res://theme/new_theme.tres" id="3_ogjtj"]
[ext_resource type="Script" uid="uid://cdxg8dofdxad0" path="res://Scenes/debug.gd" id="4_urmes"]
[ext_resource type="Texture2D" uid="uid://dieokom7snulv" path="res://UI/Over Steady-1.png" id="7_4diwu"]
[ext_resource type="Texture2D" uid="uid://cxc0n0aa5rd3c" path="res://UI/Health Outline-1.png" id="7_skk52"]
[ext_resource type="Texture2D" uid="uid://bwmcjggeo5f8b" path="res://UI/Over Steady.png" id="8_e0gac"]
[ext_resource type="Texture2D" uid="uid://dn1unhjs3d7p4" path="res://UI/Health Outline.png" id="8_ifuvl"]
[ext_resource type="Texture2D" uid="uid://b0xs637q7y3nq" path="res://UI/Filled Steady.png" id="9_4t036"]
[ext_resource type="Texture2D" uid="uid://basxv1ob4i4lr" path="res://UI/Health.png" id="9_23cwy"]
[ext_resource type="Texture2D" uid="uid://47q3q814b38n" path="res://UI/Frame 7.png" id="10_7vpi8"]
[ext_resource type="Texture2D" uid="uid://dhlt0lgjdp4al" path="res://UI/Over-1.png" id="11_a66jp"]
[ext_resource type="Texture2D" uid="uid://dyn2woxfc5djx" path="res://UI/Over.png" id="12_lhksh"]
[ext_resource type="Texture2D" uid="uid://cwegsia45v83a" path="res://UI/Filled Swift.png" id="13_v2cld"]
[ext_resource type="Texture2D" uid="uid://b6mbaveojmv4s" path="res://UI/Frame 9.png" id="14_qj2fq"]
[ext_resource type="Texture2D" uid="uid://c7jbxt76gnuka" path="res://UI/Frame 6.png" id="15_jexbx"]
[ext_resource type="Texture2D" uid="uid://dms4fhxkvmus6" path="res://UI/Frame 8.png" id="16_t8sen"]
[ext_resource type="Texture2D" uid="uid://dnex3tuqba6pp" path="res://UI/Frame 10.png" id="20_fh064"]
[ext_resource type="FontFile" uid="uid://54ppgksbmiv4" path="res://UI/vcr-jp.ttf" id="21_t01qx"]
[ext_resource type="Script" uid="uid://b8alqs38vk7br" path="res://Scripts/message_dialogue.gd" id="22_wpjfl"]
[ext_resource type="Theme" uid="uid://ba5n7metdq8eq" path="res://FontVcr.tres" id="23_bi64h"]
[ext_resource type="Texture2D" uid="uid://dmoxqotnllu6w" path="res://UI/optionMenu.png" id="24_vfarp"]
[ext_resource type="Script" uid="uid://d2ikgufligu2v" path="res://Scripts/Pause_menu.gd" id="24_y6uwr"]
[ext_resource type="Theme" uid="uid://c58arneuyijtt" path="res://FontChary.tres" id="25_y6uwr"]
[ext_resource type="Texture2D" uid="uid://cfqki6ho468b0" path="res://UI/Button.png" id="26_83xs0"]
[ext_resource type="Script" uid="uid://djx5deis4blr8" path="res://Scripts/link_to_scene.gd" id="27_ypfnu"]
[ext_resource type="PackedScene" uid="uid://vpd6gfpf7su4" path="res://Scenes/death_menu.tscn" id="29_83xs0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xc2g5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wydro"]

[sub_resource type="BoxMesh" id="BoxMesh_olqyp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_olqyp"]
size = Vector3(1.3186, 1.98975, 1.65674)

[sub_resource type="SpriteFrames" id="SpriteFrames_6606s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_7vpi8")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_qj2fq")
}],
"loop": true,
"name": &"locked_out",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_jexbx")
}],
"loop": true,
"name": &"steady_mode",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_t8sen")
}],
"loop": true,
"name": &"swift_mode",
"speed": 2.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yoeqr"]
bg_color = Color(0.988235, 0.780392, 0.0745098, 1)

[sub_resource type="Theme" id="Theme_xuaoq"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_2d5jy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_xc2g5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wydro")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67939, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="SteadyModeRig" parent="Head/Camera3D" instance=ExtResource("2_woolh")]
transform = Transform3D(-0.295611, 4.51025e-10, 2.58392e-08, 0, 0.295566, -0.00515912, -2.58431e-08, -0.00515912, -0.295566, 0.019, -2.7, 0.012)

[node name="Skeleton3D" parent="Head/Camera3D/SteadyModeRig/Armature" index="0"]
bones/0/position = Vector3(1.22395, 8.70342, -0.0766039)
bones/0/rotation = Quaternion(-0.400356, -0.392968, 0.678957, -0.473613)
bones/1/rotation = Quaternion(0.531372, 0.099226, 0.0514863, 0.839731)
bones/1/scale = Vector3(1.04654, 1.04654, 1.04654)
bones/2/rotation = Quaternion(0.117295, 0.0584896, 0.100662, 0.98625)
bones/4/rotation = Quaternion(-0.0128982, -0.0179262, -0.59577, 0.802852)
bones/5/rotation = Quaternion(0.123112, -0.0393313, -0.745042, 0.654377)
bones/7/rotation = Quaternion(0.286035, 0.0551403, 0.527516, 0.798041)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.407088, -0.271908, 0.496364, 0.716916)
bones/8/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(0.294014, 0.05044, 0.521398, 0.799472)
bones/11/rotation = Quaternion(0.411416, -0.2658, 0.49597, 0.717008)
bones/13/rotation = Quaternion(0.241147, 0.0701059, 0.543701, 0.800826)
bones/14/rotation = Quaternion(0.3914, -0.301216, 0.48615, 0.720925)
bones/16/rotation = Quaternion(0.223458, 0.0416888, 0.534491, 0.814032)
bones/17/rotation = Quaternion(0.403754, -0.323152, 0.462548, 0.720143)
bones/19/position = Vector3(0.353953, 1.78485, 0.388087)
bones/19/rotation = Quaternion(0.333253, 0.0718341, 0.258468, 0.903867)
bones/19/scale = Vector3(1, 1, 1)
bones/20/position = Vector3(-0.851537, 8.70342, -0.500119)
bones/20/rotation = Quaternion(0.535931, 0.0250384, 0.809951, 0.236918)
bones/21/rotation = Quaternion(0.242033, 0.0438533, -0.731198, 0.636275)
bones/22/rotation = Quaternion(-0.0780963, 0.218363, 0.205934, 0.950689)
bones/24/rotation = Quaternion(-0.0597115, 0.0184008, 0.317827, 0.946088)
bones/27/rotation = Quaternion(0.063104, -0.00537806, -0.013075, 0.997907)
bones/27/scale = Vector3(0.8355, 0.835499, 0.835499)
bones/28/rotation = Quaternion(0.0407545, -0.0171656, -0.0217973, 0.998784)
bones/28/scale = Vector3(0.488899, 0.488899, 0.488899)
bones/30/rotation = Quaternion(0.452234, 0.0346568, -0.434488, 0.778141)
bones/31/rotation = Quaternion(0.309595, -0.0180489, -0.326166, 0.892995)
bones/33/rotation = Quaternion(0.400898, 0.0168415, -0.459236, 0.792527)
bones/34/rotation = Quaternion(0.373558, 0.0138461, -0.42166, 0.826115)
bones/36/rotation = Quaternion(0.378361, 0.0517152, -0.447693, 0.808541)
bones/37/rotation = Quaternion(0.49075, 0.0488932, -0.521267, 0.696459)
bones/38/position = Vector3(-0.0607744, 0.384922, 0.135328)
bones/38/rotation = Quaternion(0.0478173, -0.470021, -0.215862, 0.854516)
bones/38/scale = Vector3(1.15846, 1.15846, 1.15846)

[node name="Gun2" parent="Head/Camera3D/SteadyModeRig/Armature/Skeleton3D" index="0"]
transform = Transform3D(-0.258957, 0.00628686, 0.00793593, -0.00803442, -0.00400263, -0.258999, -0.00616045, -0.259048, 0.00419445, -1.19971, 8.84448, 2.62076)

[node name="SwiftModeRig" parent="Head/Camera3D" instance=ExtResource("3_1xckg")]
transform = Transform3D(-0.296, 4.51618e-10, 2.58732e-08, 0, 0.295955, -0.00516591, -2.58771e-08, -0.00516591, -0.295955, 0.019, -2.7, 0.012)

[node name="Skeleton3D" parent="Head/Camera3D/SwiftModeRig/Armature_001" index="0"]
bones/0/position = Vector3(1.22395, 8.70342, -0.0766039)
bones/0/rotation = Quaternion(-0.687357, -0.0032412, 0.295778, -0.663359)
bones/1/rotation = Quaternion(0.276235, 0.0779107, 0.761731, 0.580853)
bones/1/scale = Vector3(1.04654, 1.04654, 1.04654)
bones/2/rotation = Quaternion(0.117295, 0.0584896, 0.100662, 0.98625)
bones/4/rotation = Quaternion(-0.0128982, -0.0179262, -0.59577, 0.802852)
bones/5/rotation = Quaternion(0.123112, -0.0393313, -0.745042, 0.654377)
bones/7/rotation = Quaternion(0.286035, 0.0551403, 0.527516, 0.798041)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.407088, -0.271908, 0.496364, 0.716916)
bones/8/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(0.294014, 0.05044, 0.521398, 0.799472)
bones/11/rotation = Quaternion(0.411416, -0.2658, 0.49597, 0.717008)
bones/13/rotation = Quaternion(0.241147, 0.0701059, 0.543701, 0.800826)
bones/14/rotation = Quaternion(0.3914, -0.301216, 0.48615, 0.720925)
bones/16/rotation = Quaternion(0.223458, 0.0416888, 0.534491, 0.814032)
bones/17/rotation = Quaternion(0.403754, -0.323152, 0.462548, 0.720143)
bones/18/position = Vector3(0.301708, 0.23411, 0.371876)
bones/18/rotation = Quaternion(0.273483, 0.136852, 0.395412, 0.866099)
bones/18/scale = Vector3(1, 1, 1)
bones/20/position = Vector3(-0.851537, 8.70342, -0.500119)
bones/20/rotation = Quaternion(0.535931, 0.0250384, 0.809951, 0.236918)
bones/21/rotation = Quaternion(0.242033, 0.0438533, -0.731198, 0.636275)
bones/22/rotation = Quaternion(-0.0780963, 0.218363, 0.205934, 0.950689)
bones/24/rotation = Quaternion(-0.0597115, 0.0184008, 0.317827, 0.946088)
bones/27/rotation = Quaternion(0.063104, -0.00537806, -0.013075, 0.997907)
bones/27/scale = Vector3(0.8355, 0.835499, 0.835499)
bones/28/rotation = Quaternion(0.0407545, -0.0171656, -0.0217973, 0.998784)
bones/28/scale = Vector3(0.488899, 0.488899, 0.488899)
bones/30/rotation = Quaternion(0.452234, 0.0346568, -0.434488, 0.778141)
bones/31/rotation = Quaternion(0.309595, -0.0180489, -0.326166, 0.892995)
bones/33/rotation = Quaternion(0.400898, 0.0168415, -0.459236, 0.792527)
bones/34/rotation = Quaternion(0.373558, 0.0138461, -0.42166, 0.826115)
bones/36/rotation = Quaternion(0.378361, 0.0517152, -0.447693, 0.808541)
bones/37/rotation = Quaternion(0.49075, 0.0488932, -0.521267, 0.696459)
bones/38/position = Vector3(-0.0607744, 0.384922, 0.135328)
bones/38/rotation = Quaternion(0.0478173, -0.470021, -0.215862, 0.854516)
bones/38/scale = Vector3(1.15846, 1.15846, 1.15846)

[node name="Gun2_002" parent="Head/Camera3D/SwiftModeRig/Armature_001/Skeleton3D" index="0"]
transform = Transform3D(0.137815, -0.171426, -0.080195, 0.146889, 0.15944, -0.0883935, 0.119339, 0.00171781, 0.201411, -0.553161, 7.4891, 0.783691)

[node name="Gun2_001" parent="Head/Camera3D/SwiftModeRig/Armature_001/Skeleton3D" index="1"]
transform = Transform3D(-0.258957, 0.00628686, 0.00793593, -0.00803442, -0.00400263, -0.258999, -0.00616045, -0.259048, 0.00419445, -1.19971, 8.84448, 2.62076)

[node name="SteadyRayCast" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1.26936, 0, 0, 0, 1.73, 0, 0, 0, 0.711908, 0.39171, -0.054116, -1.0802)
target_position = Vector3(0, 0, -1)
debug_shape_thickness = 3

[node name="FarAwayObjectToLookAt" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.55278, 3.39446, -100)

[node name="DebugTooLookAt" type="CSGMesh3D" parent="Head/Camera3D/FarAwayObjectToLookAt"]
visible = false
mesh = SubResource("BoxMesh_olqyp")

[node name="SwifRayCast" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(-1.11597, 2.91373e-09, 8.82165e-08, 2.45527e-15, 1.10551, -0.0101978, -1.68507e-07, -0.0192968, -0.584232, -0.233957, -0.0860379, -1.31115)
target_position = Vector3(0, 0, 1)
debug_shape_thickness = 3

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00656033, 0, -1.33602)
light_color = Color(0.943774, 0.498392, 0.26308, 1)
light_energy = 10.0
spot_range = 8.0569
spot_angle = 72.0348

[node name="BashArea" type="Area3D" parent="Head/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/BashArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0784912, -0.508057, -0.831299)
shape = SubResource("BoxShape3D_olqyp")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="reticle" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_1oh1a")

[node name="DebugPanel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("3_ogjtj")
script = ExtResource("4_urmes")

[node name="MarginContainer" type="MarginContainer" parent="UI/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="StatsBar" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -102.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/StatsBar"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/StatsBar/MarginContainer"]
layout_mode = 2
value = 100.0
fill_mode = 6
texture_under = ExtResource("7_skk52")
texture_over = ExtResource("8_ifuvl")
texture_progress = ExtResource("9_23cwy")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/StatsBar"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SteadyBar" type="TextureProgressBar" parent="UI/StatsBar/HBoxContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
value = 100.0
fill_mode = 1
texture_under = ExtResource("7_4diwu")
texture_over = ExtResource("8_e0gac")
texture_progress = ExtResource("9_4t036")

[node name="MarginContainer" type="MarginContainer" parent="UI/StatsBar/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerModeIcons" type="AnimatedSprite2D" parent="UI/StatsBar/HBoxContainer/MarginContainer"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_6606s")
autoplay = "default"
frame_progress = 0.484814

[node name="SwiftBar" type="TextureProgressBar" parent="UI/StatsBar/HBoxContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("11_a66jp")
texture_over = ExtResource("12_lhksh")
texture_progress = ExtResource("13_v2cld")

[node name="AmmoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.989062
anchor_top = 0.883333
anchor_right = 0.989062
anchor_bottom = 0.883333
offset_left = -200.0
offset_right = -70.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.26197, 1.26197)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/AmmoUI"]
layout_mode = 2

[node name="AmmoIcon" type="Sprite2D" parent="UI/AmmoUI/VBoxContainer"]
position = Vector2(63, -42)
scale = Vector2(0.566691, 0.566691)
texture = ExtResource("20_fh064")

[node name="Panel" type="Panel" parent="UI/AmmoUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yoeqr")

[node name="AmmoLabel" type="Label" parent="UI/AmmoUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.784314, 0.054902, 1)
theme_override_fonts/font = ExtResource("21_t01qx")
theme_override_font_sizes/font_size = 40
text = "5"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Message" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -412.0
offset_top = -315.0
offset_right = 385.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("22_wpjfl")

[node name="Label" type="Label" parent="UI/Message"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("23_bi64h")
theme_override_colors/font_color = Color(0.640627, 0.531758, 0.257272, 1)
theme_override_fonts/font = ExtResource("21_t01qx")
text = "ABCDEF"

[node name="Timer" type="Timer" parent="UI/Message"]

[node name="Panel" type="Panel" parent="UI"]
custom_minimum_size = Vector2(600, 640)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("24_y6uwr")

[node name="PauseMenu" type="Control" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EdgeTexture" type="MarginContainer" parent="UI/Panel/PauseMenu"]
custom_minimum_size = Vector2(1600, 900)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -752.0
offset_top = -532.0
offset_right = 738.0
offset_bottom = 471.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/Panel/PauseMenu/EdgeTexture"]
layout_mode = 2
texture = ExtResource("24_vfarp")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/PauseMenu"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -142.0
offset_right = 329.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="UI/Panel/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("25_y6uwr")
theme_override_colors/font_color = Color(0.980277, 0.697521, 0.716636, 1)
theme_override_colors/font_shadow_color = Color(0.678944, 0.678944, 0.678944, 1)
theme_override_fonts/font = ExtResource("21_t01qx")
theme_override_font_sizes/font_size = 60
text = "PAUSE"
horizontal_alignment = 1

[node name="Retry" type="MarginContainer" parent="UI/Panel/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="UI/Panel/PauseMenu/VBoxContainer/Retry"]
layout_mode = 2
texture = ExtResource("26_83xs0")

[node name="Label" type="Label" parent="UI/Panel/PauseMenu/VBoxContainer/Retry/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_t01qx")
theme_override_font_sizes/font_size = 36
text = "RETRY"

[node name="PlayButtonLink" type="LinkButton" parent="UI/Panel/PauseMenu/VBoxContainer/Retry"]
layout_mode = 2
theme = SubResource("Theme_xuaoq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.583765, 0.0962636, 0.721461, 1)
underline = 1

[node name="Main_Menu" type="MarginContainer" parent="UI/Panel/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="UI/Panel/PauseMenu/VBoxContainer/Main_Menu"]
layout_mode = 2
texture = ExtResource("26_83xs0")

[node name="Label" type="Label" parent="UI/Panel/PauseMenu/VBoxContainer/Main_Menu/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_t01qx")
theme_override_font_sizes/font_size = 36
text = "MAIN MENU"

[node name="PlayButtonLink" type="LinkButton" parent="UI/Panel/PauseMenu/VBoxContainer/Main_Menu"]
layout_mode = 2
theme = SubResource("Theme_xuaoq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.583765, 0.0962636, 0.721461, 1)
underline = 1
script = ExtResource("27_ypfnu")
scene_to_load = "uid://dwis7o5rfphwc"

[node name="DeathMenu" parent="UI" instance=ExtResource("29_83xs0")]
visible = false
layout_mode = 1

[editable path="Head/Camera3D/SteadyModeRig"]
[editable path="Head/Camera3D/SwiftModeRig"]
